force-app/main/default/objects/LeadScoringObjectSetting__mdt/LeadScoringObjectSetting__mdt.object-meta.xml
<CustomObject>
    <description>The Object Settings related to Lead Scoring for each Market and Key Brand</description>
    <label>Lead Scoring Object Setting</label>
    <pluralLabel>Lead Scoring Object Settings</pluralLabel>
</CustomObject>