force-app/main/default/objects/LeadScoringObjectSetting__mdt/fields/KeyBrand__c.field-meta.xml
<CustomField>
    <fullName>KeyBrand__c</fullName>
    <label>Key Brand</label>
    <length>18</length>
    <type>Text</type>
</CustomField>