force-app/main/default/objects/LeadScoringObjectSetting__mdt/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>