force-app/main/default/objects/LeadScoringObjectSetting__mdt/fields/Stackable__c.field-meta.xml
<CustomField>
    <fullName>Stackable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stackable</label>
    <type>Checkbox</type>
</CustomField>